[tool.poetry]
name = "redis-caching"
version = "0.1.3"
description = "A Python library for caching in Redis"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rominf/redis-caching"
keywords = ["library", "redis", "cache", "caching", "aioredis", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.5"
aioredis = "^1.1"
dill = "^0.2.8"
dataclasses = "^0.6.0"
